--- a/lekcii/mathanalys.tex
+++ b/lekcii/mathanalys.tex
@@ -106,7 +106,7 @@
 
 \section{Лекция 1.}
 
-В этом чеместре мы будем занимать анализом функций от многих переменных, то есть,  $f:\RR^n\rightarrow \RR^m$,  и если $m=1$, то такая функция называется функцией многих переменных. \ 
+В этом cеместре мы будем занимать анализом функций от многих переменных, то есть,  $f:\RR^n\rightarrow \RR^m$,  и если $m=1$, то такая функция называется функцией многих переменных. \ 
 
 \begin{defn}
     \textit{Кривые в $\RR^n$} - непрерывное отображение $f:[a, b]\rightarrow \RR^n$.
@@ -281,7 +281,7 @@ $(x-y)$ - евклидово расстояние.
 \]
 это формулы Муавра. Также можно получить и периодичность, это, вообщем-то очевидно и завершает наш разговор об элементарных функциях. \\
 
-Перейдём теперь к многочерному анализу. Мы бы хотели точно также уметь анализировать функции и делать всё то, что мы уже умеем делать для одномерных функций, в том числе, решать экстремальные задачи. Нас интересуют функции $f:\RR^m\rightarrow \RR^n$. \ 
+Перейдём теперь к многомерному анализу. Мы бы хотели точно также уметь анализировать функции и делать всё то, что мы уже умеем делать для одномерных функций, в том числе, решать экстремальные задачи. Нас интересуют функции $f:\RR^m\rightarrow \RR^n$. \ 
 
 Начнём с того, что в евклидовом пространстве $\RR^m$ расстояние задаётся как 
 \[
@@ -394,20 +394,20 @@ $(x-y)$ - евклидово расстояние.
 \end{remark}  
 
 \begin{defn}
-    \textit{Частная производная}. Пусть имеется $f:\RR\rightarrow \RR$, $f(x_1, \ldots, x_n)$, $x^0=(x_1^0, \ldots, x_n^0)$. Тогда частная производная по $x_k $, $f(x_1^0, \ldots, x_{k-1}^0, x, x_{k+1}^0, \ldots, x_m^0)=g(x), g'(x_k^0)$. $\frac{\partial f}{\partial x_k}\bigg|_{x^0}:=g'(x_k^0)=\lim_{\varepsilon\rightarrow 0}\frac{f(\ldots, x_k^0+\varepsilon, \ldots)-f(\ldots)}{\varepsilon}$. 
+    \textit{Частная производная}. Пусть имеется $f:\RR^n\rightarrow \RR$, $f(x_1, \ldots, x_n)$, $x^0=(x_1^0, \ldots, x_n^0)$. Тогда частная производная по $x_k $, $f(x_1^0, \ldots, x_{k-1}^0, x, x_{k+1}^0, \ldots, x_m^0)=g(x), g'(x_k^0)$. $\frac{\partial f}{\partial x_k}\bigg|_{x^0}:=g'(x_k^0)=\lim_{\varepsilon\rightarrow 0}\frac{f(\ldots, x_k^0+\varepsilon, \ldots)-f(\ldots)}{\varepsilon}$. 
 \end{defn}
 
 Рассмотрим теперь \textit{производную по направлению}. Пусть направление задаётся $e\in\RR^n$, $||e||=1$, $f$ - дифференцируема по направлению $e$, если $g(t)=f(x^0+te)$, $t\in\RR$ и существует $g'(0)$, то производная по направлению $e$ - $g'(0)=\lim_{t\rightarrow 0}\frac{f(x^0+te)-f(x^0)}{t}$.  
 
 \section{Лекция 5.}
 
-Введём несколько дополнительных терминологий. Пусть у нас есть отображение $f:\RR^n\rightarrow \RR^m$, $f=(f_1, \ldots, f_m)$, $\frac{\partial f_k}{\partial x_l}$, $1\leq k\leq m$, $1\leq l\leq n$, тогда \textit{матрица Якоби} выглядит как
+Введём несколько дополнительных терминологий. Пусть у нас есть отображение $f:\RR^n\rightarrow \RR^m$, $f=(f_1, \ldots, f_m)$, $\frac{\partial f_k}{\partial x_l}$, $1\leq k\leq m$, $1\leq l\leq n$, тогда \textit{матрица Якоби} (в какой-то точке $x$) выглядит как
 
 \begin{equation*}
     \begin{pmatrix}
-        \frac{\partial f_1}{\partial x_1} & \dots & \frac{\partial f_m}{\partial x_1} \\
+        \frac{\partial f_1}{\partial x_1} & \dots & \frac{\partial f_1}{\partial x_n} \\
         \vdots & \ddots & \vdots \\
-        \frac{\partial f_1}{\partial x_m} & \dots & \frac{\partial f_m}{\partial x_m}
+        \frac{\partial f_m}{\partial x_1} & \dots & \frac{\partial f_m}{\partial x_n}
     \end{pmatrix}
 \end{equation*}
 
@@ -420,7 +420,7 @@ $(x-y)$ - евклидово расстояние.
     \[
         f(x_1, x_2, x_3)-f(x_1^0, x_2, x_3)+f(x_1^0, x_2, x_3)-f(x_1^0, x_2^0, x_3^0)
     \]
-    Разбивается в две подряд идещие разности, достаточно удобные, но последняя всё равно ''не айс'':
+    Разбивается в две подряд идущие разности, достаточно удобные, но последняя всё равно ''не айс'':
     \[
         f(x_1, x_2, x_3)-f(x_1^0, x_2, x_3)+f(x_1^0, x_2, x_3)-f(x_1^0, x_2^0, x_3)+f(x_1^0, x_2^0, x_3)-f(x_1^0, x_2^0, x_3^0)
     \]
@@ -439,7 +439,7 @@ $(x-y)$ - евклидово расстояние.
 \end{proof}
 
 \begin{theorem}
-    Пусть $f:\RR^n\rightarrow \RR$, $f$ - гладкая на $G$ - открытое(???). Я нихуя не могу прочитать, что тут написано.
+    Пусть $f:\RR^n\rightarrow \RR$, $f$ - гладкая на открытом $G$. Я нихуя не могу прочитать, что тут написано.
 \end{theorem}
 
 \begin{proof}
