--- a/aktual'nye_bilety(2sem)/dtv.tickets.tex
+++ b/aktual'nye_bilety(2sem)/dtv.tickets.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper,100pt]{article}
 
-\usepackage[utf8]{inputenc}
+\usepackage[utf8x]{inputenc}
 \usepackage[unicode, pdftex]{hyperref}
 \usepackage{cmap}
 \usepackage{mathtext}
