алгебра до 4 лекции

--- a/ABSOLUTELY NEW CONSPECTY (3 sem)/algg.tex
+++ b/ABSOLUTELY NEW CONSPECTY (3 sem)/algg.tex
@@ -48,7 +48,7 @@
 %\geometry{verbose,a4paper,tmargin=2cm,bmargin=2cm,lmargin=2.5cm,rmargin=1.5cm}
 
 \title{Теория категорий}
-\author{Тутанов Михаил \\ на основе лекций Петрова В.А.
+\author{Тутанов Михаил и Копейкина Софья\\ на основе лекций Петрова В.А.
 \\ под редакцией @keba4ok}
 \date{\today}
 
@@ -320,6 +320,133 @@
     \item В ЧУМе функторы -- монотонные отображения;
     \item $\mathcal{F}: \mathbb{1} \rightarrow \mathcal{C}$ -- выбор объекта в $\mathcal{C}$, а если наоборот, то функтор единственен, то есть одноэлементная категория с одним морфизмом -- это <<терминальная>> категория (строгое определение будет позднее).
 \end{itemize}
+
+%2nd
+
+\section{Функтор}
+%это было на предыдущей лекции, но я повторю его, чтобы моя часть была выстроена лаконично
+\defn \se{Функтор}{Функтор} - это отображение $F: C \ra D$ между категориями со следующими свойствами:
+\begin{enumerate}
+    \item Если $X \in\Ob\;C$, то $F(x) \in\Ob\;D$
+    \item $\forall A, B \in\Ob\;C$ и $F: A \ra B$ -- $F(f): F(A) \ra F(B)$, причем "произведение переходит в произведение" и "единичный гомоморфизм в единичный гомоморфизм", т.е. \\
+    $F(f \circ g) = F(f) \circ F(g)$ и $F(id_A) = id_{F(A)}$
+\end{enumerate}
+\stat $A \simeq B \Ra F(A) \simeq F(B)$ \\
+Доказательство: \\
+$A \simeq B$, значит $\exists f: A \ra B$ и $g: B \ra A$ такие, что 
+$f \circ g = id_B$ и $g \circ f = id_A$. \\
+Вспомним, что функтор сохраняет произведение и единичный гомоморфизм: \\
+$F(f) \circ F(g) = id_{F(B)}$ и $F(g) \circ F(f) = id_{F(A)}$. \\
+Мы нашли гомоморфизмы с нужными нам свойствами, а значит $F(A) \simeq F(B)$.\\
+\begin{flushright}
+QED
+\end{flushright}
+
+\section{Примеры функторов}
+\begin{enumerate}
+    \item \se{Забывающий функтор}{Забывающий функтор} \\
+    Такой функтор стандартно обозначается как $U$, он "забывает" алгебраические структуры. Рассмотрим на примере групп: \\
+    $U: Groups \ra Sets$ \\
+    $U(G) = G$ как множество \\
+    $U(f) = f$ как отображение множеств
+    \item \se{Свободный функтор}{Свободный функтор} \\
+    Это функтор, который "вспоминает" алгебраическую структуру. Рассмотрим также на примере групп: \\
+    $F: Sets \ra Groups$ \\
+    $F(X) = $ свободная группа, порожденная X\\
+    $F(f): F(X) \ra F(Y)$, который переводит образующие в образующие: $x \mapsto f(x)$
+    \item Конкретный пример свободного функтора между ассоциативными алгебрами с единицей и векторными пространствами: \\
+    $K$ - поле, $U: K-Alg \ra Vect_K$ и $F: Vect_K \ra K-Alg$ \\
+    $F(V) = T(V) = K \bigoplus V \bigoplus V^{\bigotimes 2} \bigoplus V^{\bigotimes 3} \bigoplus ...$ \\
+    Со следующей структурой: \\
+    $V^{\bigotimes n} \times V ^{\bigotimes m} \ra V^{\bigotimes (n + m)}$ \\
+    $(v_1 \otimes ... \otimes v_n; u_1 \otimes ... \otimes u_m) \mapsto v_1 \otimes ... \otimes v_n \otimes u_1 \otimes ... \otimes u_m$ \\
+    А с гомоморфизмами дела обстоят следующим образом: \\
+    $f: V \ra W$, тогда $F(f): T(V) \ra T(W)$, который работает так: \\
+    $V^{\bigotimes n} \ra W^{\bigotimes n}$ \\
+    $v_1 \otimes ... \otimes v_n \ra f(v_1) \otimes ... \otimes f(v_n)$
+    \item Аналогично между коммутативными алгебрами и векторными пространствами: \\
+    $S: K-CommAlg \ra Vect_K$ \\
+    $S(V) = T(V)_{/<u \otimes v - v \otimes u>}$, что называется \cursed{симметрической алгеброй}
+    \item Еще пример - между абелевыми и обычными группами: \\
+    $F: AbGroups \ra Groups$ \\
+    $F(G) = G_{/[G, G]}$ \\
+    $F(f)[g] = [f(g)]$
+    \item \se{Множества с выделенной точкой}{Множества с выделенной точкой} и свободный функтор между ними и категорией множеств: \\
+    $Sets_*$ - это категория, определенная следующим образом: $Ob\;Sets_*$ состоит из элементов следующего вида: $(A, a \in A)$. Гомоморфизмы устроены так: $f_*: (A, a) \ra (B, b)$, причем переводит выделенную точку в выделенную точку. \\
+    Свободный функтор выглядит так: \\
+    $F: Sets \ra Sets_*$ \\
+    $A \mapsto A \sqcup \{\varnothing\}$ \\
+    $f \mapsto f \times (\varnothing; \varnothing)$
+    \item \se{Копредставимый функтор}{Копредставимый функтор} - это функтор, действующий их категории в категорию множеств $F: C \ra Sets$, построенный следующим образом: \\
+    $A\in\Ob\;C$ $F(X) = Hom(A, X)$ \\
+    $f: X \ra Y$ -- $F(f): Hom(A, X) \ra Hom(A, Y)$ \\
+    $\phi \mapsto f \circ \phi$
+\end{enumerate}
+\defn \se{Контрвариантый функтор}{Контрвариантный функтор} из $C$ в $D$ - это функтор из $C^{op}$ в $D^{op}$: \\
+$A \in\Ob\;C$ -- $F(A) \in\Ob\;D$ \\
+$f: A \ra B$ -- $F(f): F(B) \ra F(a)$ и $F(f \circ g) = F(g) \circ F(f)$, $F(id_A) = id_{F(A)}$ \\
+\defn \se{Представимый функтор}{Представимый функтор} - это такой функтор $h_A: C^{Op} \ra Sets$, $A \in\Ob\;C$, действующий по правилу: \\
+$h_A(X) = Hom(X, A)$, $h_A(f): \phi \mapsto \phi \circ f$
+
+\section{Мономорфизмы и эпиморфизмы}
+Мы хотим определить "инъективность" и "сюръективность" для гомоморфизмов между элементами категорий. Делается это следующим образом:
+\defn Гомоморфизм f называется \se{мономорфизм}{мономорфизмом}, если "на него можно сокращать слева", т.е. $f \circ g = f \circ h \Ra g = h$ \\
+\textbf{Примеры}
+\begin{itemize}
+    \item Sets - инъективные отображения
+    \item Groups - инъективне гомоморфизмы групп
+    \item Rings - инъективные гомоморфизмы колец
+\end{itemize}
+\remark Сохраняют ли функторы мономорфизмы? НЕТ
+\defn Гомоморфизм $f: X \ra Y$ называется \se{Расщепимый мономорфизм}{расщепимым мономорфизмом}, если $\exists r: Y \ra X$ такой, что $r \circ f = id_X$
+\remark Сохраняют ли функторы расщепимые мономорфизмы? ДА
+\defn Гомоморфизм $f$ называется \se{Эпиморфизм}{эпиморфизмом}, если "на нее можно сокращать справа", т.е. $g \circ f = h \circ f \Ra g = h$ \\
+Аналогично можно определить расщепимый эпиморфизм:
+\defn Гомоморфизм $f: X \ra Y$ называется \se{Расщепимый эпиморфизм}{расщепимым эпиморфизмом}, если $\exists s : Y \ra X$ такой, что $f \circ s = id_Y$
+\textbf{Примеры эпиморфизмов}
+\begin{itemize}
+    \item Sets - сюръективные отображения
+    \item Groups - сюръективные гомоморфизмы групп
+    \item HausTop - непрерывные отображения с $f(X) = Y$
+\end{itemize}
+\exer \cursed{Расщепимый мономорфизм + эпиморфизм = изоморфизм} и \\
+\cursed{Расщепимый эпиморфизм + мономорфизм = изоморфизм}
+
+\section{Естественные преобразования}
+\defn $\alpha: F \ra G$ называется \se{Естественное проеобразование}{естественным преобразованием} для функторов $F, G: C \ra D$, если $\forall A \in C\;\exists \alpha_A: F(A) \ra G(A)$ такой, что \\
+$\forall f \in Hom(A, B)\;\exists \alpha_B: F(B) \ra G(B)$, причем следующая диаграмма коммутативна:
+\begin{center}
+\includegraphics[scale=0.5]{natural_transformation_diagram.PNG}
+\end{center}
+\exer $I = [Ob\;I = \{0, 1\}, Hom(I) = \{Hom(0, 0) = \{id_0\}, \\
+Hom(0, 1) = \{f = \{(0, 1)\}\}, Hom(1, 0) = \varnothing, Hom(1, 1) = \{id_1\}\}]$. \\
+Задать естественное преобразование это все равно, что задать следующий функтор: $H: C \times I \ra D\;|\;H(\;, 0) = F$ и $H(\;, 1) = G$, со следующей структурой категории $C \times I$: \\
+$Ob\;C\times I =\Ob\;C \times\Ob\;I$, $Hom(C \times I) = Hom(C) \times Hom(I)$ \\
+\textbf{Примеры}
+\begin{itemize}
+    \item $V \in Vect_K$. Для функторов $Vect_K \ra Vect_K$ $F: V \mapsto V, f \mapsto f$ и $G: V \mapsto V^{**}, \phi \mapsto \phi^{**}$ есть естественное преобразование $\alpha\;|\;\alpha_V: F \ra G: V = F(V) \mapsto G(V) = V^{**}$ такое, что $\alpha_V(f)(v) = f(v)$
+    \item \se{Топологическая группа}{Топологическая группа} - это группа с топологической структурой, на которой заданы две непрерывные операции: $G \times G \ra G : (a, b) \mapsto ab$ и $G \ra G : a \mapsto a^{-1}$ \\
+    (к примеру, $(\RR, +)$ и $(S^1, \cdot)$ - это топологические группы). В данном примере нас будет интересовать \cursed{локально компактные тополгические абелевы группы}. Для каждой группы $A$ определим двойственную: $A^* = Hom(A, S^1)$ - непрерывные гомоморфизмы групп (вместе с какой-то топологией). \\
+    Итак, для функторов $LocCompAb \ra LocCompAb$ $F = Id$ и $G: A \mapsto A^{**}$ есть естественное преобразование $\alpha: F \ra G$, которое определяется так же, как и в предыдущем примере.
+\end{itemize}
+
+\section{Эквивалентность категорий}
+\defn Есть три функтора $F, G, H: C \ra D$ и два естественных преобразования: $\alpha: F \ra G$ и $\beta: G \ra H$.  \se{Композиция(вертикальная) естественных преобразований}{Композиция(вертикальная) естественных преобразований} это естественное преобразование $\beta \circ \alpha : F \ra H\;|\;(\beta \circ \alpha)_A = \beta_A \circ \alpha_A$
+\remark Заметим, что мы таким образом определили категорию $Funct(C, D)$ - функторов из $C$ в $D$, в которой морфизмы - это естественные преобразования.
+\defn Есть четыре функтора $F, G: C \ra D, \;H, K: D \ra E$ и два естественных преобразования: $\alpha: F \ra G$ и $\beta: H \ra E$. \\
+\se{Композиция(горизнтальная) естественных преобразований}{Композиция(горизнтальная) естественных преобразований} - это естественное преобразование $\beta \bullet \alpha: H \circ F \ra K \circ G\;|\;(\beta \bullet \alpha)_A : H(F(A)) \ra K(G(A))$, последнее работает следующим образом: $H(\alpha_A): H(F(A)) \ra H(G(A)), (\beta \bullet \alpha)_A = \beta_{G(A)}(H(\alpha_A))$
+\exer Композициии, определенные таким образом, действительно являются естественными преобразованиями.
+\exer Горизонтальная композиция коммутирует с вертикальной.
+\defn Категории $C$ и $D$ называются \se{Эквивалентность категорий}{эквивалентными}, если $\exists F: C \ra D$ и $G: D \ra C$, причем есть естественные преобразования \\
+$\alpha: Id_G \ra F \circ G,\; \alpha^{-1}: F \circ G \ra Id_G$ и $\beta: Id_C \ra G \circ F,\; \beta^{-1}: G \circ F \ra Id$ такие, что \\
+$\alpha \circ \alpha^{-1} = Id, \alpha^{-1} \circ \alpha = Id$ и $\beta \circ \beta^{-1} = Id, \beta^{-1} \circ \beta = Id$
+
+
+
+
+
+
+
 
 \hypertarget{dex}
     \printindex
