--- a/ABSOLUTELY NEW CONSPECTY (3 sem)/algg.tex
+++ b/ABSOLUTELY NEW CONSPECTY (3 sem)/algg.tex
@@ -285,7 +285,7 @@
 Определим ещё одну важную категорию (пока что в частном случае, когда-нибудь здесь появится значительно более общее определение)
 
 \begin{defn}
-    \se{Категория стрелки}{Категорией стрелки} $\mathcal{C}/A$, где $\mathcal{C}$ -- категория, а $A$ -- объект в ней, называется следующая категория: $\Ob\mathcal{C}/A$ = пары $(X, f)$, где $X\in \Ob\mathcal{C}$, $f\in \Hom (X, A)$; $\Hom ((X, f), (Y, g)$ = $\lbrace h\in \Hom (X, Y) \vert f = g\circ  h \rbrace$. 
+    \se{Категория стрелки}{Категорией стрелки} $\mathcal{C}/A$, где $\mathcal{C}$ -- категория, а $A$ -- объект в ней, называется следующая категория: $\Ob\mathcal{C}/A$ = пары $(X, f)$, где $X\in \Ob\mathcal{C}$, $f\in \Hom (X, A)$; $\Hom ((X, f), (Y, g))$ = $\lbrace h\in \Hom (X, Y) \vert f = g\circ  h \rbrace$. 
 \end{defn}
 
 Терминальным объектом в этой категории будет $(A, \id_{A})$. Аналогично, развернув стрелки, можно определить категорию $\mathcal{C}\setminus A$
@@ -303,7 +303,7 @@
 \end{itemize}
 
 \begin{defn}
-\se{Функтор}{Функтором} $\mathcal{F}$ называется отображение между двумя категориями $\mathcal{C}$ и $\mathcal{D}$ (определённое и на объектах, и на морфизмах) с ожидаемыми свойствами: 
+\se{Функтор}{Функтором} $\mathcal{F}$ называется отображение между двумя категориями $\mathcal{C}$ и $\mathcal{D}$ (определённое и на объектах, и на морфизмах) со свойствами: 
     \begin{itemize}
         \item Если $f\in \Hom (X, Y)$, то $\mathcal{F} (f)\in \Hom (\mathcal{F}(X), \mathcal{F}(Y))$;
         \item $\mathcal{F}(f\circ  g) = \mathcal{F}(f) \circ  \mathcal{F}(g)$;
